﻿2007-05-23  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/gui/sell.cpp, src/gui/buy.cpp, src/being.cpp: A bunch of
	lingering syntactical changes.

2007-05-23  Philipp Sehmisch  <tmw@crushnet.org>

	* src/gui/viewport.cpp,
	data/graphics/gui/target-cursor-blue-s.png,
	data/graphics/gui/target-cursor-blue-m.png,
	data/graphics/gui/target-cursor-blue-l.png,
	data/graphics/gui/target-cursor-red-s.png,
	data/graphics/gui/target-cursor-red-m.png,
	data/graphics/gui/target-cursor-red-l.png: Replaced target cursor
	graphics with higher quality ones by Pauan.
	* src/particle.cpp: Made bouncing particles immune against death by
	ground contact and removed a nonsensical debugging log message. Made
	text splash effects fade out.
	* src/textparticle.cpp: Implemented fading in and out for text
	particles.

2007-05-20  Eugenio Favalli  <elvenprogrammer@gmail.com>

	* tmw.cbp: Updated Code::Blocks project file.

2007-05-20  Philipp Sehmisch  <tmw@crushnet.org>

	* src/gui/buy.cpp, src/gui/sell.cpp: Unified some differences between
	buy and sell dialog. Money label now shows money after transaction
	instead of current money.
	* src/gui/sell.cpp: Fixed the amount-not-reset-when-using-scrollwheel
	bug.
	* src/being.h, src/gui/viewport.cpp, src/gui/viewport.h: Added 3
	different target cursor sizes.
	* src/monster.h, src/monster.cpp, src/resources/monsterdb.cpp,
	scr/resources/monsterinfo.h, data/monsters.xml: Target cursor size for
	monster is read from the monsters.xml.
	* data/graphics/gui/target-cursor-blue-s.png,
	data/graphics/gui/target-cursor-blue-m.png,
	data/graphics/gui/target-cursor-blue-l.png,
	data/graphics/gui/target-cursor-red-s.png,
	data/graphics/gui/target-cursor-red-m.png,
	data/graphics/gui/target-cursor-red-l.png: Added temporary
	placeholders for small and large target cursors until better versions
	based on the original SVG are available.

2007-05-08  Philipp Sehmisch  <tmw@crushnet.org>

	* data/graphics/sprites/monster-bat.png,